[package]
name = "mobius"
version = "0.1.0"
authors = ["Bernardo Meurer <meurerbernardo@gmail.com>"]
description = "A fast Rust implementation of the Mobius function"
repository = "https://github.com/bemeurer/mobius"
readme = "./README.md"
keywords = ["prime", "mobius", "moebius", "function", "math"]
categories = ["algorithms", "science"]
license = "BSD-3-Clause"

[badges]
travis-ci = { repository = "bemeurer/mobius", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
num = "0.2"

[dev-dependencies]
serde_json = "1.0"

[profile.dev]
opt-level = 1
debug = true
rpath = false
lto = false
codegen-units = 16
panic = 'unwind'
incremental = true
overflow-checks = false

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
overflow-checks = false

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
overflow-checks = false
